cmake_minimum_required(VERSION 3.16)
project(WarzoneRiskGame CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if (MSVC)
  add_compile_options(/W4 /permissive-)
else()
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()
add_executable(WarzoneRiskGame
    src/MainDriver.cpp
)
add_executable(OrdersDriver
    src/OrdersDriver.cpp
    src/Orders.cpp
)